Enterprise Edition support tokens

--- a/app/assets/stylesheets/content/_ng_dialog.sass
+++ b/app/assets/stylesheets/content/_ng_dialog.sass
@@ -46,6 +46,10 @@
     // Required for close icon
     position: relative
 
+  .ngdialog-body
+    margin-top: 2rem
+    min-height: 50px
+
   .ngdialog-close
     cursor: pointer
     position: absolute
