--- a/app/assets/stylesheets/specific/onboarding.sass
+++ b/app/assets/stylesheets/specific/onboarding.sass
@@ -27,8 +27,10 @@
 //++
 
 // Align ngDialog's close button
-.onboarding-modal .ngdialog-close
+.onboarding-modal .ngdialog-close,
+.ngdialog-theme-openproject .ngdialog-close
   line-height: $header-height
+  color: $header-item-font-color
 
 .onboarding--top-menu
   display: flex
