--- a/app/assets/stylesheets/layout/_top_menu.sass
+++ b/app/assets/stylesheets/layout/_top_menu.sass
@@ -31,6 +31,7 @@
   width: $main-menu-width
   height: $header-height
   background-color: $header-logo-bg-color
+  background-color: var(--primary-color-dark)
   .home-link
     margin-top: 13px
     display: block
@@ -41,6 +42,7 @@
 
 #top-menu
   background-color: $header-bg-color
+  background-color: var(--primary-color)
   height: $header-height
   width: 100%
   padding: 0
