list custom field normalisation and multi select

--- a/app/views/custom_fields/_form.html.erb
+++ b/app/views/custom_fields/_form.html.erb
@@ -63,33 +63,29 @@ See doc/COPYRIGHT.rdoc for more details.
     </span>
   </div>
 
+  <div class="form--field" id="custom_field_multi_select">
+    <%= f.check_box :multi_value %>
+  </div>
+
   <div class="form--field" id="custom_field_possible_values_attributes">
     <% if @custom_field.new_record? || @custom_field.field_format == 'list' %>
-      <% possible_values = @custom_field.translations.inject({}) do |h, t|
-        h[t.locale] = t.possible_values.to_a.join("\n")
-        h
-      end %>
+      <% possible_values = @custom_field.custom_options.map(&:value).join("\n") %>
       <%= f.text_area :possible_values,
                       value: possible_values,
-                      rows: 15,
-                      multi_locale: true %><br>
+                      rows: 15
+      %><br>
     <% end %>
     <span class="form--field-instructions"><%= l(:text_custom_field_possible_values_info) %></span>
   </div>
   <div id="custom_field_default_value_attributes">
-    <div class="form--field" id="default_value_text_multi">
-      <% unless @custom_field.field_format == 'bool' %>
-        <%= f.text_field(:default_value, multi_locale: true) %>
-      <% end %>
-    </div>
-    <div class="form--field" id="default_value_text_single">
-      <% if @custom_field.new_record? || ['date', 'float', 'int'].include?(@custom_field.field_format) %>
-        <%= f.text_field(:default_value, single_locale: true) %>
+    <div class="form--field" id="default_value_text">
+      <% if @custom_field.new_record? || @custom_field.field_format != 'bool' %>
+        <%= f.text_field(:default_value) %>
       <% end %>
     </div>
     <div class="form--field" style="display:none" id="default_value_bool">
       <% if @custom_field.new_record? || @custom_field.field_format == 'bool' %>
-        <%= f.check_box(:default_value, single_locale: true) %>
+        <%= f.check_box(:default_value) %>
       <% end %>
     </div>
   </div>
