--- a/app/assets/stylesheets/content/_widget_box.sass
+++ b/app/assets/stylesheets/content/_widget_box.sass
@@ -140,6 +140,7 @@ $widget-box--enumeration-width: 20px
         display: inline-block
         font-size: 0.6rem
         color: $alternative-color
+        color: var(--alternative-color)
         width: $widget-box--enumeration-width
 
 
