--- a/app/assets/stylesheets/layout/_footer.sass
+++ b/app/assets/stylesheets/layout/_footer.sass
@@ -35,7 +35,9 @@
   margin-top: -$footer-height
   padding: 0
   clear: both
-  background-color: $footer-bg-color
+  background-color:      $footer-bg-color
+  background-color: var(--footer-bg-color)
+
   @include default-font($footer-font-color)
 
   %absolute-layout-mode &
