--- a/app/assets/stylesheets/layout/_main_menu.sass
+++ b/app/assets/stylesheets/layout/_main_menu.sass
@@ -219,7 +219,8 @@ $toggler-width: 40px
     background-color: $main-menu-bg-color
     @include default-transition
     &:hover
-      background: $main-menu-bg-hover-selected-background
+      background:      $main-menu-bg-hover-selected-background
+      background: var(--main-menu-bg-hover-selected-background)
     &.show
       width: $main-menu-folded-width
       a.navigation-toggler
