--- a/app/assets/stylesheets/layout/_toolbar.sass
+++ b/app/assets/stylesheets/layout/_toolbar.sass
@@ -139,7 +139,8 @@
       font-size: $h2-font-size
 
   span
-    color: $content-link-color
+    color:      $content-link-color
+    color: var(--content-link-color)
 
     &:hover
       text-decoration: underline
