--- a/app/assets/stylesheets/timelines.css.sass
+++ b/app/assets/stylesheets/timelines.css.sass
@@ -146,7 +146,8 @@ a.tl-discreet-link, input.tl-discreet-link
   font-weight: normal
 
 a.tl-discreet-link:hover, input.icon:hover
-  color: $primary-color-dark
+  color:      $primary-color-dark
+  color: var(--primary-color-dark)
   text-decoration: underline
 
 #content .timeline
