--- a/app/assets/stylesheets/layout/_main_menu.sass
+++ b/app/assets/stylesheets/layout/_main_menu.sass
@@ -28,10 +28,6 @@
 
 $toggler-width: 40px
 
-@mixin highlight-left-item-border
-  border-left: $main-menu-selected-hover-indicator-width solid      $main-menu-selected-hover-indicator-color
-  border-left: $main-menu-selected-hover-indicator-width solid var(--main-menu-selected-hover-indicator-color)
-
 #main-menu
   bottom: auto
   width: $main-menu-width
@@ -64,8 +60,8 @@ $toggler-width: 40px
           @include default-transition
 
           &:hover
-            background: $main-menu-bg-hover-selected-background
-            background: var(--main-menu-bg-hover-selected-background)
+            background:      $main-menu-bg-hover-background
+            background: var(--main-menu-bg-hover-background)
 
             @if $main-menu-enable-toggle-highlighting != true
               // simultaneously hover all menu item anchor tags
@@ -78,18 +74,24 @@ $toggler-width: 40px
             text-decoration: none
 
             &.selected, &.selected + a
-              background:      $main-menu-bg-hover-selected-background
-              background: var(--main-menu-bg-hover-selected-background)
+              background:      $main-menu-bg-selected-background
+              background: var(--main-menu-bg-selected-background)
 
             &:hover, &.selected, &.selected + a
               color: $main-menu-selected-font-color
+
+            &:hover
+              background:      $main-menu-bg-hover-background
+              background: var(--main-menu-bg-hover-background)
 
 
 
           // left item border hover / selected effect
           &:hover
             &> a:not(.toggler)
-              +highlight-left-item-border
+              border-left: $main-menu-selected-hover-indicator-width solid      $main-menu-hover-indicator-color
+              border-left: $main-menu-selected-hover-indicator-width solid var(--main-menu-hover-indicator-color)
+
 
             a:not(:only-child):first-of-type
               border-right: 1px solid $main-menu-selected-font-color
@@ -100,7 +102,9 @@ $toggler-width: 40px
             @extend .small-12
 
             &.selected
-              +highlight-left-item-border
+              border-left: $main-menu-selected-hover-indicator-width solid      $main-menu-selected-indicator-color
+              border-left: $main-menu-selected-hover-indicator-width solid var(--main-menu-selected-indicator-color)
+
 
           a:not(:only-child):first-of-type.selected
             border-right: 1px solid $main-menu-selected-font-color
@@ -153,8 +157,8 @@ $toggler-width: 40px
         @include default-transition
 
         &:hover
-          background:      $main-menu-child-bg-hover-selected-color
-          background: var(--main-menu-child-bg-hover-selected-color)
+          background:      $main-menu-child-bg-hover-color
+          background: var(--main-menu-child-bg-hover-color)
 
           @if $main-menu-enable-toggle-highlighting != true
             // simultaneously hover all menu item anchor tags
@@ -167,8 +171,8 @@ $toggler-width: 40px
           text-decoration: none
 
           &.selected, &.selected + a
-            background:      $main-menu-child-bg-hover-selected-color
-            background: var(--main-menu-child-bg-hover-selected-color)
+            background:      $main-menu-child-bg-selected-color
+            background: var(--main-menu-child-bg-selected-color)
 
 
           &:hover, &.selected, &.selected + a
@@ -219,8 +223,8 @@ $toggler-width: 40px
     background-color: $main-menu-bg-color
     @include default-transition
     &:hover
-      background:      $main-menu-bg-hover-selected-background
-      background: var(--main-menu-bg-hover-selected-background)
+      background:      $main-menu-bg-hover-background
+      background: var(--main-menu-bg-hover-background)
     &.show
       width: $main-menu-folded-width
       a.navigation-toggler
