--- a/app/assets/stylesheets/layout/_main_menu.sass
+++ b/app/assets/stylesheets/layout/_main_menu.sass
@@ -77,6 +77,10 @@ $toggler-width: 40px
               background:      $main-menu-bg-selected-background
               background: var(--main-menu-bg-selected-background)
 
+              &:hover
+                background:      $main-menu-bg-hover-background
+                background: var(--main-menu-bg-hover-background)
+
             &:hover, &.selected, &.selected + a
               color: $main-menu-selected-font-color
 
