--- a/app/views/enterprises/_current.html.erb
+++ b/app/views/enterprises/_current.html.erb
@@ -34,5 +34,5 @@
 <%= form_tag({ action: :destroy },
              method: :delete,
              class: 'confirm-form-submit') do %>
-  <%= styled_button_tag l(:button_delete), type: 'submit', class: '-with-icon icon-delete' %>
+  <%= styled_button_tag t(:button_delete), type: 'submit', class: '-with-icon icon-delete' %>
 <% end %>
