fix dashed border color for my page edit

--- a/app/assets/stylesheets/open_project_global/_variables.sass.erb
+++ b/app/assets/stylesheets/open_project_global/_variables.sass.erb
@@ -208,6 +208,8 @@ $context-menu-font-color:                       $main-menu-font-color !default
 $content-box-border:                            1px solid $content-default-border-color !default
 $content-box-bg-color:                          #FFFFFF !default
 $my-page-edit-box-border-color:                 $primary-color-dark !default
+\:root
+  --my-page-edit-box-border-color:              var(--primary-color-dark)
 
 $drop-down-unselected-font-color:               $main-menu-font-color !default
 $drop-down-selected-font-color:                 $font-color-on-primary !default
