--- a/app/assets/stylesheets/content/_my_page.sass
+++ b/app/assets/stylesheets/content/_my_page.sass
@@ -80,7 +80,8 @@ div.box-actions
     margin: 0
 
 .block-receiver
-  border: 1px dashed $my-page-edit-box-border-color
+  border: 1px dashed      $my-page-edit-box-border-color
+  border: 1px dashed var(--my-page-edit-box-border-color)
   margin-bottom: 20px
   padding: 8px
 
