Fix: compatibility with themes: Make loading of SASS variables in _timelines.sass innesessary

--- a/app/assets/stylesheets/content/_timelines.scss
+++ b/app/assets/stylesheets/content/_timelines.scss
@@ -86,3 +86,14 @@ table.timelines-dates {
 .contextual.timelines-for_previous_heading {
   margin-top: -2.6em;
 }
+
+a.tl-discreet-link:hover, input.icon:hover {
+  color:      $primary-color-dark;
+  color: var(--primary-color-dark);
+  text-decoration: underline;
+}
+
+a.tl-discreet-link, input.tl-discreet-link {
+  color: $body-font-color;
+  font-weight: normal;
+}
