--- a/app/assets/stylesheets/timelines.css.sass
+++ b/app/assets/stylesheets/timelines.css.sass
@@ -26,8 +26,6 @@
  * See doc/COPYRIGHT.rdoc for more details.  ++
  */
 
-@import open_project_global/variables
-
 /* ╭───────────────────────────────────────────────────────────────────╮ *
  * │ General and initialization                                        │ *
  * ╰───────────────────────────────────────────────────────────────────╯ */
@@ -42,7 +40,7 @@ select
   &#tl-toolbar-outlines, &#tl-toolbar-zooms
     background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20version%3D%221.1%22%20width%3D%2232%22%20height%3D%2224%22%20viewBox%3D%220%200%2032%2024%22%3E%3Cpolygon%20points%3D%220%2C0%2032%2C0%2016%2C24%22%20style%3D%22fill%3A%20black%22%3E%3C/polygon%3E%3C/svg%3E")
     line-height: normal
-    padding: rem-concat-list($select-element-padding)
+    padding: rem-concat-list(3px, 24px, 3px, 3px)
 
 .timeline
   clear: right
@@ -140,15 +138,6 @@ select
  * │ would be a great idea to define a high-specificity rule for table │ *
  * │ headers.                                                          │ *
  * ╰───────────────────────────────────────────────────────────────────╯ */
-
-a.tl-discreet-link, input.tl-discreet-link
-  color: $body-font-color
-  font-weight: normal
-
-a.tl-discreet-link:hover, input.icon:hover
-  color:      $primary-color-dark
-  color: var(--primary-color-dark)
-  text-decoration: underline
 
 #content .timeline
   table
