--- a/frontend/app/components/wp-table/timeline/controls/wp-timeline.dummy-controls.directive.html
+++ b/frontend/app/components/wp-table/timeline/controls/wp-timeline.dummy-controls.directive.html
@@ -1,4 +1,4 @@
-<div class="wp-timeline--dummy-controls" ng-if="$ctrl.wpTimeline.visible">
+<div class="wp-timeline--dummy-controls hide-when-print" ng-if="$ctrl.wpTimeline.visible">
   <div class="timeline-controls--zoom-buttons">
     <button class="button -transparent"
             ng-disabled="$ctrl.currentZoom == $ctrl.maxZoomLevel"
