--- a/app/assets/stylesheets/print.css
+++ b/app/assets/stylesheets/print.css
@@ -29,12 +29,19 @@ See doc/COPYRIGHT.rdoc for more details.
 
 /***** Media print specific styles *****/
 @media print {
-  #top-menu, #header, #main-menu, #sidebar, #footer, .contextual, .other-formats { display:none; }
+  .hide-when-print { display: none; }
+
+  #top-menu, #header, #main-menu, #sidebar, #footer, #breadcrumb, .contextual, .other-formats { display:none; }
   #main { background: #fff; }
   #content { width: 99%; margin: 0; padding: 0; border: 0; background: #fff; overflow: visible !important;}
   #wiki_add_attachment { display:none; }
-  .hide-when-print { display: none; }
-  .autoscroll {overflow-x: visible;}
+  .autoscroll { overflow-x: visible; }
+
+  /* User agent styles */
+  .title-container h1 { font-size: 2em;}
+  .title-container h2 { font-size: 1.5em; }
+  .title-container h3 { font-size: 1.17em; }
+
   table.list {margin-top:0.5em;}
   table.list th, table.list td {border: 1px solid #aaa;}
 }
