--- a/frontend/app/templates/components/selectable_title.html
+++ b/frontend/app/templates/components/selectable_title.html
@@ -4,7 +4,7 @@
       <span has-dropdown-menu target="QuerySelectDropdownMenu"
         locals="selectedTitle,groups,transitionMethod">
         <accessible-by-keyboard link-title="{{ I18n.t('js.toolbar.search_query_title') }}" >
-          <i class="icon-pulldown icon-button icon-small">
+          <i class="icon-pulldown icon-button icon-small hide-when-print">
           </i>
           {{ selectedTitle | characters:50 }}
         </accessible-by-keyboard>
