Use interpolation syntax in SASS for assigning SASS variables to CSS4 variables

--- a/app/assets/stylesheets/open_project_global/_variables.sass.erb
+++ b/app/assets/stylesheets/open_project_global/_variables.sass.erb
@@ -44,8 +44,8 @@ $<%= var %>: <%= hexcode %>
 <% end %>
 
 \:root
-  <%  DesignColor.defaults.each do |var, hexcode| %>
-  --<%= var %>: <%= hexcode %>
+  <%  DesignColor.defaults.each do |var, _hexcode| %>
+  --<%= var %>: #{$<%= var %>}
   <% end %>
 
 $secondary-color:         #bfbfbf !default
