add missing CSS4 variable color assignment

--- a/app/assets/stylesheets/open_project_global/_variables.sass.erb
+++ b/app/assets/stylesheets/open_project_global/_variables.sass.erb
@@ -179,6 +179,8 @@ $content-icon-link-hover-color:                 $primary-color-dark !default
 $content-icon-link-pressed-color:               $gray-dark !default
 
 $content-icon-color:                            $primary-color-dark !default
+\:root
+  --content-icon-color:                         $primary-color-dark
 
 $content-form-bg-color:                         #F8F8F8 !default
 $content-form-border:                           1px solid $content-default-border-color !default
